# deployment-files

./: README.md
Dockerfiles/: NodeJS-docker  node-python-blender-docker  python-docker
Dockerfiles/ECS Workflows/: dev.json
ECS Pipelines/: dev.json
ECS Workflows/: prod.json  stage.json
google_cloud/.gcp/manifests/: backend-config.yaml  deployment.yaml  secrets.yaml  service.yaml
tcp_reverse_proxy/: DOCS.md
tcp_reverse_proxy/odin/: Cargo.toml
tcp_reverse_proxy/odin/src/: main.rs
tcp_reverse_proxy/thor/: thor.go
workflows/: dev.yaml
