[package]
name = "odin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.19"

[profile.release]
lto = true
strip = true

[dependencies.uuid]
version = "0.8"
features = ["v4"]